--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
              <p class="status" id="money">Dinheiro: $50</p>
              <button onclick="cultivar()">Cultivar</button>
              <button onclick="cidade()">Ir para a Cidade</button>
-             <p id="mensagem"></p>
-        
+             <p id="mensagem"></p> 
          </div>
+         <script src="script.js"></script>
     </body>
  </html>
