--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
             <h2>Depoimento</h2>
             <div class="testimonial">
                 <p>"Este projeto mudou minha vida, me proporcionando novas oportunidades de crecimento e desenvolvimento."</p>
+                <cite>- joão silva</cite>
+            </div>
+            <div class="testimonial">
+                <p> A integração entre o campo e a cidade trouxe inovação e sustentabilidade para nossa comunidade.</p>
+                <cite>- Maria Oliveira</cite>
+            </div>
+        </section>
+
+        <section id="news">
+            <h2>Notícia</h2>
+            <div class="news-card">
+                <h3>Iniciativa Sustentavel</h3>
+                <p>Descubra como novos projetos estão ajudando a conectar áreas rurais e urbanas de maneira sustentavel.</p>
+                <a href="#">leia mais</a>
+            </div>
+            <div class="news-card">
+                <h3>tecnologia no campo</h3>
+                <p></p>
             </div>
         </section>
         
