--- a/index.html
+++ b/index.html
@@ -63,8 +63,24 @@
             </div>
             <div class="news-card">
                 <h3>tecnologia no campo</h3>
-                <p></p>
+                <p>Veja como a tecnologia está transformando as práticas agrícolas e criando novas oportunidades.</p>
+                <a href="#">leia mais</a>
             </div>
+        </section>
+
+        <section id="contact">
+            <h2>contato</h2>
+            <form id="contact-form">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" required>
+                <small class="error" id="name-error">Por favor, insira seu nome.</small>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+                <small class="error" id="email-error">Por favor, insira um email válido.</small>
+                <label for="message">Mensagem</label>
+                <textarea id="message" name="message" required></textarea>
+                <
+            </form>
         </section>
         
         
