--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Do Campo á Cidade: Criando Oportunidades</title>
         <link rel="stylesheet" href="styless.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     </head>
     <body>
         <header>
-            <h1>Do Campo á Cidade: Criando Oportunidades</h1>
+            <h1>Agroconexão: Do Campo á Cidade</h1>
             <nav>
                 <ul>
                     <li><a href="#home">Início</a></li>
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#gallery">Galeria</a></li>
                     <li><a href="#testimonials">Depoimento</a></li>
+                    <li><a href="#news">Noticia</a></li>
+                    <li><a href="#vieo">Video</a></li>
                     <li><a href="#contact">contato</a></li>
                 </ul>                
             </nav>                      
         </header>
         <section id="home">
             <div class="banner">
+                <div class="banner-trext">
                 <h2>Bem-vindo</h2>
                 <p>"Explorando as oportunidades que surgem quando o campo e a cidade se conecta."</p>
             </div>
@@ -28,15 +32,48 @@
 
         <section id="about">
             <h2>Sobre</h2>
-            <p>"Este projeto visa destacar as oportunidades de desenvolvimento sistentável e inovador que emergem da integração entre áreas rurais e urbanas."</p>
+            <p> O projeto " Do campo à cidade: Criando oportunidades" visa destacar as enormes oportunidades proporcionadas pela agricultura de precisão.
+               Esta abordagem inovadora utiliza tecnologias avançadas para otimizar as prátiacas agrícolas, resultando em uma produção mais eficiente.
+               Com a  agricultura de precisão, agricultores podem monitorar e gerenciar seus cultivos com maior precisão, utilizando dados para tomar decisões informadas que aumentam a produtividade e reduzem desperdícios.
+               Ao conectar áreas rurais e urbanas, o projeto promove o desenvovimento econômico, melhora a qualidade de vida do campoe fortalece a integração entre produrores rurais e consumidores urbanos.</p>
         </section>
 
         <section id="gallery">
             <h2>Galeria</h2>
-            <div class="carousel">
-                <img src="images.png" class="carousel-img active">
-                <img src="imagen.png" class="carousel-img">
-                <img src="imagem.png" class="carousel-img">
+            <div class="gallery-container">
+                <a href="OIP 5.jpg" data-lightbox="gallery" data-title="Descriçaõ imagem 1">
+                    <img src="OIP 5.jpg" class="gallery-img">                   
+                </a>
+                <a href="OIP 4.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="OIP 4.jpg" class="gallery-img">
+                </a>
+                <a href="OIP 3.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="OIP 3.jpg" class="gallery-img">
+                </a>
+                <a href="OIP 2.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="OIP 2.jpg" class="gallery-img">
+                </a>
+                <a href="oip1.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="oip1.jpg" class="gallery-img">
+                </a>
+                <a href="OIP.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="OIP.jpg" class="gallery-img">
+                </a>
+                <a href="imagem.png" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="imagem.png" class="gallery-img">
+                </a>
+                <a href="imagen.png" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="imagen.png" class="gallery-img">
+                </a>
+                <a href="images.png" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="images.png" class="gallery-img">
+                </a>
+                <a href="drne.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="drne.jpg" class="gallery-img">
+                </a>
+                <a href="drone1.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
+                    <img src="drone1.jpg" class="gallery-img">
+                </a>                          
             </div>
             <button class="carousel-btn prev">Anterior</button>
             <button class="carousel-btn next">Proximo</button>           
@@ -45,26 +82,43 @@
         <section id="testimonials">
             <h2>Depoimento</h2>
             <div class="testimonial">
-                <p>"Este projeto mudou minha vida, me proporcionando novas oportunidades de crecimento e desenvolvimento."</p>
-                <cite>- joão silva</cite>
+                <p> "A implementação de técnologias de agricultura de precisão em nossa fazenda resultou em u7m aumento significativo da produtividade. Além disso, conseguimos reduzir os custos com insumos o que impactou positivamente nossa lucratividade."</p>
+                <cite>- Calos Mendes, Produtor Rural</cite>
             </div>
             <div class="testimonial">
-                <p> A integração entre o campo e a cidade trouxe inovação e sustentabilidade para nossa comunidade.</p>
-                <cite>- Maria Oliveira</cite>
+                <p> "A adoção de tecnologia de agricutura de precisão nos possibilitou uma gestão mais precisa dos recursos hídricos e fertilizantes. Como resultado, conseguimos aumentar a sustentabilidade da nossa produção e preservar o meio ambiente."</p>
+                <cite>- joão Pereira, Fazendeiro</cite>
+            </div>
+            <div class="testimonial">
+                <p> "Graças à agriciltura de precisão, conseguimos obter dados detalhados sobre nossas colheitas. Isso nos ajudou a tomar decisões mais informação e a planejar melhor sa safras futaras, garantindo uma produçãomais consistente e de qualidade."</p>
+                <cite>- Maria Fernandes, Produtora Rural</cite>
             </div>
         </section>
 
         <section id="news">
             <h2>Notícia</h2>
             <div class="news-card">
-                <h3>Iniciativa Sustentavel</h3>
-                <p>Descubra como novos projetos estão ajudando a conectar áreas rurais e urbanas de maneira sustentavel.</p>
-                <a href="#">leia mais</a>
+                <h3>inovação na Agricultura de Precisão</h3>
+                <p>Descubra como novs tecnologias estão revolucionando a agricultura de precisão no Brasil em 2023.</p>
+                <a href="https://www.embrapa.br" target="_blank">leia mais</a>
+    
             </div>
             <div class="news-card">
                 <h3>tecnologia no campo</h3>
-                <p>Veja como a tecnologia está transformando as práticas agrícolas e criando novas oportunidades.</p>
-                <a href="#">leia mais</a>
+                <p>Veja como a tecnologia está transformando a práticas agrícolas e criando novas oportunidades.</p>
+                <a href="https://www.globo.com" target="_blank" >leia mais</a>
+            </div>
+            <div class="news-card">
+                <h3>Agricultura de Precisão em foco</h3>
+                <p>Como a Agricultura de precisão está está ajundando a agricultores a aumentar a produtividade e sustentabilidade.</p>
+                <a href="https://revistagloborural.globo.com" target="_blank">Leia mais</a>
+            </div>
+        </section>
+
+        <section id="video">
+            <h2>Video: Agricultura de Precisão</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="x.mp4" title="Agricultura de precisão" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
 
