--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
         <title>Do Campo á Cidade: Criando Oportunidades</title>
         <link rel="stylesheet" href="styless.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     </head>
     <body>
-        <header>
-            <h1>Agroconexão: Do Campo á Cidade</h1>
+        <header class="animate__animated animate__fadeInDown">
+            <h1>AgroConexão: Do Campo á Cidade</h1>
             <nav>
                 <ul>
                     <li><a href="#home">Início</a></li>
@@ -18,19 +20,19 @@
                     <li><a href="#testimonials">Depoimento</a></li>
                     <li><a href="#news">Noticia</a></li>
                     <li><a href="#vieo">Video</a></li>
-                    <li><a href="#contact">contato</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>                
             </nav>                      
         </header>
         <section id="home">
             <div class="banner">
                 <div class="banner-trext">
-                <h2>Bem-vindo</h2>
-                <p>"Explorando as oportunidades que surgem quando o campo e a cidade se conecta."</p>
+                <h2 class="animate__animated animate__fadeInUp">Bem-vindo</h2>
+                <p class="animate__animated animate__fadeInUp">"Explorando as oportunidades que surgem quando o campo e a cidade se conecta."</p>
             </div>
         </section>
 
-        <section id="about">
+        <section id="about" class="animate__animated animate__fadeIn">
             <h2>Sobre</h2>
             <p> O projeto " Do campo à cidade: Criando oportunidades" visa destacar as enormes oportunidades proporcionadas pela agricultura de precisão.
                Esta abordagem inovadora utiliza tecnologias avançadas para otimizar as prátiacas agrícolas, resultando em uma produção mais eficiente.
@@ -39,40 +41,40 @@
         </section>
 
         <section id="gallery">
-            <h2>Galeria</h2>
+            <h2 class="animate__animated animate__fadeIn">Galeria</h2>
             <div class="gallery-container">
                 <a href="OIP 5.jpg" data-lightbox="gallery" data-title="Descriçaõ imagem 1">
-                    <img src="OIP 5.jpg" class="gallery-img">                   
+                    <img src="OIP 5.jpg" class="gallery-img active animate__animated animate__fadeIn">                   
                 </a>
                 <a href="OIP 4.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="OIP 4.jpg" class="gallery-img">
+                    <img src="OIP 4.jpg" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="OIP 3.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="OIP 3.jpg" class="gallery-img">
+                    <img src="OIP 3.jpg" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="OIP 2.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="OIP 2.jpg" class="gallery-img">
+                    <img src="OIP 2.jpg" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="oip1.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="oip1.jpg" class="gallery-img">
+                    <img src="oip1.jpg" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="OIP.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="OIP.jpg" class="gallery-img">
+                    <img src="OIP.jpg" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="imagem.png" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="imagem.png" class="gallery-img">
+                    <img src="imagem.png" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="imagen.png" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="imagen.png" class="gallery-img">
+                    <img src="imagen.png" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="images.png" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="images.png" class="gallery-img">
+                    <img src="images.png" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="drne.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="drne.jpg" class="gallery-img">
+                    <img src="drne.jpg" class="gallery-img active animate__animated animate__fadeIn">
                 </a>
                 <a href="drone1.jpg" data-lightbox="gallery" data-title="Descrição da imagem 2">
-                    <img src="drone1.jpg" class="gallery-img">
+                    <img src="drone1.jpg" class="gallery-img active animate__animated animate__fadeIn">
                 </a>                          
             </div>
             <button class="carousel-btn prev">Anterior</button>
@@ -98,18 +100,18 @@
         <section id="news">
             <h2>Notícia</h2>
             <div class="news-card">
-                <h3>inovação na Agricultura de Precisão</h3>
+                <h3>Inovação na Agricultura de Precisão</h3>
                 <p>Descubra como novs tecnologias estão revolucionando a agricultura de precisão no Brasil em 2023.</p>
                 <a href="https://www.embrapa.br" target="_blank">leia mais</a>
     
             </div>
             <div class="news-card">
-                <h3>tecnologia no campo</h3>
+                <h3>Tecnologia no Campo</h3>
                 <p>Veja como a tecnologia está transformando a práticas agrícolas e criando novas oportunidades.</p>
                 <a href="https://www.globo.com" target="_blank" >leia mais</a>
             </div>
             <div class="news-card">
-                <h3>Agricultura de Precisão em foco</h3>
+                <h3>Agricultura de Precisão em Foco</h3>
                 <p>Como a Agricultura de precisão está está ajundando a agricultores a aumentar a produtividade e sustentabilidade.</p>
                 <a href="https://revistagloborural.globo.com" target="_blank">Leia mais</a>
             </div>
@@ -140,7 +142,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2024 Do Campo à Cidade. Todos os direitos reservados.</p>
+            <p>&copy; 2024 AgroConexão: Do Campo à Cidade. Todos os direitos reservados.</p>
         </footer>
 
         <script src="styless.css"></script>
