--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
                 <ul>
                     <li><a href="#home">Início</a></li>
                     <li><a href="#about">Sobre</a></li>
+                    <li><a href="#what-is">O que é?</a></li>
+                    <li><a href="#purpose">Para que?</a></li>
+                    <li><a href="application">Aplicações</a></li>
                     <li><a href="#gallery">Galeria</a></li>
                     <li><a href="#testimonials">Depoimento</a></li>
                     <li><a href="#news">Noticia</a></li>
-                    <li><a href="#vieo">Video</a></li>
+                    <li><a href="#video">Video</a></li>
                     <li><a href="#contact">Contato</a></li>
                 </ul>                
             </nav>                      
@@ -38,6 +41,30 @@
                Esta abordagem inovadora utiliza tecnologias avançadas para otimizar as prátiacas agrícolas, resultando em uma produção mais eficiente.
                Com a  agricultura de precisão, agricultores podem monitorar e gerenciar seus cultivos com maior precisão, utilizando dados para tomar decisões informadas que aumentam a produtividade e reduzem desperdícios.
                Ao conectar áreas rurais e urbanas, o projeto promove o desenvovimento econômico, melhora a qualidade de vida do campoe fortalece a integração entre produrores rurais e consumidores urbanos.</p>
+        </section>
+
+        <section id="what-is">
+            <h2>O que é Agricultura de Precisão?</h2>
+            <p>A agricultura de precisão é uma abordagem moderna que utiliza tecnologias avançadas para monitorar e gerenciar a variabilidade no campo, com o objetivo de otimizar a produção agrícola.
+                 Envolve o uso de GPS, sensores, imagens de satélite e análise de dados para tomar decisões mais precisas e eficientes.</p>
+        </section>
+
+        <section id="purpose">
+            <h2>Para que serve a Agricultura de Precisão?</h2>
+            <p>A agricultura de precisão serve para aumentar a produtividade e a eficiência das operações agrícolas, reduzindo custos e minimizando o impacto ambiental. 
+                Permite que os agricultores apliquem insumos (como fertilizantes e pesticidas) de forma mais precisa, resultando em melhor saúde das plantas e maior rendimento das colheitas.</p>
+        </section>
+
+        <section id="application">
+            <h2>Onde é aplicada a Agricultura de Precisão?</h2>
+            <p>A agriciltura de precisa é aplicada em diversas áreas, incluindo:</p>
+            <ul>
+                <li> Plantações de grandes cultivos com soja, milho e trigo.</li>
+                <li> Horticultira e fruticultira.</li>
+                <li> Produção de café e outros coltivos especializados.</li>
+                <li> Gestão de pastagens e pecuária.</li>
+                <li> Monitoramento ambiental e conservação do solo.</li>
+            </ul>
         </section>
 
         <section id="gallery">
@@ -84,7 +111,7 @@
         <section id="testimonials">
             <h2>Depoimento</h2>
             <div class="testimonial">
-                <p> "A implementação de técnologias de agricultura de precisão em nossa fazenda resultou em u7m aumento significativo da produtividade. Além disso, conseguimos reduzir os custos com insumos o que impactou positivamente nossa lucratividade."</p>
+                <p> "A implementação de técnologias de agricultura de precisão em nossa fazenda resultou em um aumento significativo da produtividade. Além disso, conseguimos reduzir os custos com insumos o que impactou positivamente nossa lucratividade."</p>
                 <cite>- Calos Mendes, Produtor Rural</cite>
             </div>
             <div class="testimonial">
