--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
              </div>
          </section>
 
+         <section id="news" class="animate_animated animate_fadeIn">
+            <h2>Notícias</h2>
+            <div id="news-container"></div>
+         </section>
+
          <section id="video">
              <h2 class="animate__animated animate__fadeInUp">Video: Agricultura de Precisão</h2>
              <div class="video-container">
