--- a/inicio.html
+++ b/inicio.html
@@ -10,11 +10,14 @@
          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
          <link rel="manifest" href="/manifest.json">
          <link rel="styleheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+         <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&display=swap" rel="stylesheet">
          <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
          <style>
           body {
-            background-image: url(nt.jpeg);
+            background-image: url(Intenacional.jpg);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -49,8 +52,8 @@
          <section id="home">
              <div class="banner">
                  <div class="banner-trext">
-                 <h2 class="animate__animated animate__fadeInUp">Bem-vindo</h2>
-                 <p class="animate__animated animate__fadeInUp">"Explorando as oportunidades que surgem quando o campo e a cidade se conecta."</p>
+                 <h2 class="animate__animated animate__fadeInUp"></h2>
+                 <p class="animate__animated animate__fadeInUp">"Cultive seus sonhos como quem planta sementes: com paciência e cuidado, pois cada colheita é a recompensa de um trabalho árduo."</p>
              </div>
          </section>
 
