--- a/avaliacao.html
+++ b/avaliacao.html
@@ -201,6 +201,8 @@
                         <button class="like-btn">Curtir</button>
                         <span class="like-count">0 curtidas</span>
                     </div>
+                </div>
+                    <section>
                     <div class="review-item">
                         <p>"AgroConexão é um site incrível!
                              Como alguém que se interessa por agricultura e tecnologia, encontrei muitas informações valiosas sobre práticas agrícolas modernas e sustentabilidade.
@@ -210,6 +212,7 @@
                             <button class="like-btn">Curtir</button>
                             <span class="like-count">0 curtidas</span>
                         </div>
+                    </section>
                         <div class="review-item">
                             <p> "Fiquei muito satisfeito com minha visita ao AgroConexão.
                                  O site oferece uma visão inspiradora sobre como a agricultura de precisão pode promover práticas sustentáveis e beneficiar tanto o meio ambiente quanto a economia.
@@ -219,6 +222,8 @@
                                 <button class="like-btn">Curtir</button>
                                 <span class="like-count">0 curtidas</span>
                             </div>
+                        </div>
+                            <section>
                             <div class="review-item">
                                 <p>"Acabei de explorar o site AgroConexão e saí com uma nova perspectiva sobre a agricultura moderna.
                                      A combinação de conteúdo educativo, design atraente e recursos visuais faz deste site uma excelente fonte de informação.
@@ -228,13 +233,14 @@
                                     <button class="like-btn">Curtir</button>
                                     <span class="like-count">0 curtidas</span>
                                 </div>
+                            </section>
                 </div>
                 <!-- Adicione mais avaliações aqui -->
             </div>
         </section>
 
         <!-- Botão para voltar para a página principal -->
-        <a href="index.html" class="btn-voltar">Voltar à Página Principal</a>
+        <a href="inicio.html" class="btn-voltar">Voltar à Página Principal</a>
     </div>
 
     <script>
