--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
 
         <section id="about" class="animate__animated animate__fadeIn">
             <h2 class="animate__animated animate__fadeInUp">Sobre</h2>
-            <p> O projeto " Do campo à cidade: Criando oportunidades" visa destacar as enormes oportunidades proporcionadas pela agricultura de precisão.
-              Esta abordagem inovadora utiliza tecnologias avançadas para otimizar as prátiacas agrícolas, resultando em uma produção mais eficiente.
-              Com a  agricultura de precisão, agricultores podem monitorar e gerenciar seus cultivos com maior precisão, utilizando dados para tomar decisões informadas que aumentam a produtividade e reduzem desperdícios.
-              Ao conectar áreas rurais e urbanas, o projeto promove o desenvovimento econômico, melhora a qualidade de vida do campoe fortalece a integração entre produrores rurais e consumidores urbanos.</p>
+            <p>O projeto "Do Campo à Cidade: Criando Oportunidades" destaca as oportunidades oferecidas pela agricultura de precisão, uma abordagem que utiliza tecnologias avançadas para otimizar práticas agrícolas e promover uma produção mais eficiente e sustentável. Com o uso de sensores, drones e imagens de satélite, os agricultores podem monitorar e gerenciar seus cultivos com precisão, permitindo a tomada de decisões informadas que aumentam a produtividade e reduzem desperdícios.
+                Além de melhorar a eficiência e a sustentabilidade, a agricultura de precisão também fortalece a conexão entre áreas rurais e urbanas. Essa integração promove o desenvolvimento econômico, tornando a agricultura mais rentável e atraente, especialmente para os jovens. Isso resulta em alimentos mais acessíveis e de melhor qualidade para os consumidores urbanos, além de revitalizar comunidades rurais.
+                O projeto ilustra como a agricultura de precisão pode transformar a agricultura tradicional, beneficiando tanto produtores quanto consumidores e contribuindo para a melhoria da qualidade de vida e o desenvolvimento econômico equilibrado.</p>
         </section>
 
         <section id="about" class="animate__animated animate__fadeIn">
@@ -62,7 +61,6 @@
              <!-- Botão para redirecionar para a página de avaliações -->
              <a href="cadastrar.html" class="btn-cadastrar">Cadastrar-se</a>
         </section>
-
         
         <footer>
             <p>&copy; 2024 AgroConexão: Do Campo à Cidade. Todos os direitos reservados.</p>
